--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="card-body">
                   <div class="h5 mb-1">Servicio Técnico y reparación de PCs <span class="text-muted h6">de forma autónoma.</span></div>
                   <div class="text-muted text-small mb-2">2006 - 2014</div>
-                  <div>Realizo ensamblado y reparación de equipos informáticos, instalación y configuración tanto de sistemas operativos, como de aplicaciones y paquetes informáticos de propósito general </div>
+                  <div>Realicé ensamblado y reparación de equipos informáticos, instalación y configuración tanto de sistemas operativos, como de aplicaciones y paquetes informáticos de propósito general.</div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-left timeline-card-primary card shadow-sm scroll-content fadeLeft">
@@ -204,11 +204,11 @@
                   <div class="row">
                       <div class="col-6">
                         <label for="name">Nombre y apellido:</label>
-                          <input class="form-control text-decoration-none" type="text" name="name" placeholder="Nombre y apellido" required>
+                          <input class="form-control text-decoration-none" type="text" name="name" required>
                       </div>
                       <div class="col-6">
                         <label for="email">E-mail:</label>
-                          <input class="form-control text-decoration-none" type="text" name="email" placeholder="E-mail" required>
+                          <input class="form-control text-decoration-none" type="email" name="email" placeholder="ejemplo@mail.com" required>
                         
                       </div>
                     </div>
@@ -240,13 +240,25 @@
                   <div class="footer-nav">
                     <nav role="navigation">
                       <ul class="nav justify-content-center">
-                        <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="LinkedIn" target="_blank" rel="noopener noreferrer"><span class="menu-title sr-only">LinkedIn</span></a>
+                        <li class="nav-item">
+                          <a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+                            <img class="icon" src="./images/linkedin-grey.png" width="40" alt="LinkedIn">
+                          </a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/belendefranchi/" title="Facebook" target="_blank" rel="noopener noreferrer"><span class="menu-title sr-only">Facebook</span></a>
+                        <li class="nav-item">
+                          <a class="nav-link" href="https://www.facebook.com/belendefranchi/" title="Facebook" target="_blank" rel="noopener noreferrer">
+                            <img class="icon" src="./images/facebook-grey.png" width="40" alt="Facebook">
+                          </a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/belendefranchi/" title="Instagram" target="_blank" rel="noopener noreferrer"><span class="menu-title sr-only">Instagram</span></a>
+                        <li class="nav-item">
+                          <a class="nav-link" href="https://www.instagram.com/belendefranchi/" title="Instagram" target="_blank" rel="noopener noreferrer">
+                            <img class="icon" src="./images/instagram-grey.png" width="40" alt="Instagram">
+                          </a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="https://github.com/Belendefranchi/" title="Github" target="_blank" rel="noopener noreferrer"><span class="menu-title sr-only">Github</span></a>
+                        <li class="nav-item">
+                          <a class="nav-link" href="https://github.com/Belendefranchi/" title="Github" target="_blank" rel="noopener noreferrer">
+                            <img class="icon" src="./images/github-grey.png" width="40" alt="GitHub">
+                          </a>
                         </li>
                       </ul>
                     </nav>
