--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <header>
       <div class="container text-center text-lg-left py-3">
         <nav>
-          <ul class="nav justify-content-end">
+          <ul class="nav justify-content-end gap-2 pe-2">
             <li class="nav-item">
               <a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="linkedIn" target="_blank" rel="noopener noreferrer">
-                <span class="menu-title sr-only">linkedIn</span>
+                <img class="icon" src="./images/linkedin-grey.png" width="25" alt="LinkedIn">
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.facebook.com/belendefranchi/" title="Facebook" target="_blank" rel="noopener noreferrer">
-                <span class="menu-title sr-only">Facebook</span>
+                <img class="icon" src="./images/facebook-grey.png" width="25" alt="Facebook">
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.instagram.com/belendefranchi/" title="Instagram" target="_blank" rel="noopener noreferrer">
-                <span class="menu-title sr-only">Instagram</span>
+                <img class="icon" src="./images/instagram-grey.png" width="25" alt="Instagram">
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/Belendefranchi/" title="Github" target="_blank" rel="noopener noreferrer">
-                <span class="menu-title sr-only">Github</span>
+                <img class="icon" src="./images/github-grey.png" width="25" alt="GitHub">
               </a>
             </li>
           </ul>
@@ -239,7 +239,7 @@
                   <div class="h4">María Belén De Franchi</div>
                   <div class="footer-nav">
                     <nav role="navigation">
-                      <ul class="nav justify-content-center">
+                      <ul class="nav justify-content-center gap-1">
                         <li class="nav-item">
                           <a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="LinkedIn" target="_blank" rel="noopener noreferrer">
                             <img class="icon" src="./images/linkedin-grey.png" width="40" alt="LinkedIn">
