--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
           <ul class="nav justify-content-end gap-2 pe-2">
             <li class="nav-item">
               <a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="linkedIn" target="_blank" rel="noopener noreferrer">
-                <img class="icon" src="./images/linkedin-grey.png" width="25" alt="LinkedIn">
+                <img class="icon" src="./images/linkedin.png" width="25" alt="LinkedIn">
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.facebook.com/belendefranchi/" title="Facebook" target="_blank" rel="noopener noreferrer">
-                <img class="icon" src="./images/facebook-grey.png" width="25" alt="Facebook">
+                <img class="icon" src="./images/facebook.png" width="25" alt="Facebook">
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.instagram.com/belendefranchi/" title="Instagram" target="_blank" rel="noopener noreferrer">
-                <img class="icon" src="./images/instagram-grey.png" width="25" alt="Instagram">
+                <img class="icon" src="./images/instagram.png" width="25" alt="Instagram">
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/Belendefranchi/" title="Github" target="_blank" rel="noopener noreferrer">
-                <img class="icon" src="./images/github-grey.png" width="25" alt="GitHub">
+                <img class="icon" src="./images/github.png" width="25" alt="GitHub">
               </a>
             </li>
           </ul>
@@ -242,22 +242,22 @@
                       <ul class="nav justify-content-center gap-1">
                         <li class="nav-item">
                           <a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="LinkedIn" target="_blank" rel="noopener noreferrer">
-                            <img class="icon" src="./images/linkedin-grey.png" width="40" alt="LinkedIn">
+                            <img class="icon" src="./images/linkedin.png" width="40" alt="LinkedIn">
                           </a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://www.facebook.com/belendefranchi/" title="Facebook" target="_blank" rel="noopener noreferrer">
-                            <img class="icon" src="./images/facebook-grey.png" width="40" alt="Facebook">
+                            <img class="icon" src="./images/facebook.png" width="40" alt="Facebook">
                           </a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://www.instagram.com/belendefranchi/" title="Instagram" target="_blank" rel="noopener noreferrer">
-                            <img class="icon" src="./images/instagram-grey.png" width="40" alt="Instagram">
+                            <img class="icon" src="./images/instagram.png" width="40" alt="Instagram">
                           </a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://github.com/Belendefranchi/" title="Github" target="_blank" rel="noopener noreferrer">
-                            <img class="icon" src="./images/github-grey.png" width="40" alt="GitHub">
+                            <img class="icon" src="./images/github.png" width="40" alt="GitHub">
                           </a>
                         </li>
                       </ul>
