agrego cursos coder

--- a/index.html
+++ b/index.html
@@ -166,9 +166,30 @@
               </div>
               <div class="timeline-card timeline-card-right timeline-card-success card shadow-sm scroll-content fadeRight">
                 <div class="card-body">
+                  <div class="h5 mb-1">React Js <span class="text-muted h6">en CoderHouse</span></div>
+                  <div class="text-muted text-small mb-2">2022 - 2023</div>
+                  <div>En este curso, que es el tercer nivel de la carrera de programación, se aprende a programar por componentes, mediante Javascript, JS, ES6, y se adquieren las ventajas de la utilización del flujos de datos. Permite aplicar el manejo de rutas utilizando Firebase, y ayuda a comprender la utilización del virtual DOM mediante los desarrollos de React JS. Brinda la capacidad de crear tus propias aplicaciones SPA, y de hacer cualquier desarrollo con uno de los frameworks más populares y avanzados del momento.</div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-right timeline-card-success card shadow-sm scroll-content fadeRight">
+                <div class="card-body">
                   <div class="h5 mb-1">Full Stack PHP <span class="text-muted h6">en Codo a Codo 4.0</span></div>
                   <div class="text-muted text-small mb-2">2022 - 2023</div>
                   <div>Codo a Codo 4.0 es un Programa de enseñanza en Programación, destinado a personas jóvenes y adultas, que cuenten con título secundario. Tiene como objetivo brindar herramientas que faciliten la inserción laboral en el sector IT, necesarias para mejorar la empleabilidad de las personas.</div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-right timeline-card-success card shadow-sm scroll-content fadeRight">
+                <div class="card-body">
+                  <div class="h5 mb-1">Javascript <span class="text-muted h6">en CoderHouse</span></div>
+                  <div class="text-muted text-small mb-2">2022</div>
+                  <div>En este curso se adquieren los fundamentos del lenguaje de programación más usado en la actualidad, con el cual es posible crear aplicaciones de todo tipo. Permite reconocer la utilidad de las librerías estudiando jQuery, y cómo aplicar técnicas de desarrollo para apps modernas con AJAX. </div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-right timeline-card-success card shadow-sm scroll-content fadeRight">
+                <div class="card-body">
+                  <div class="h5 mb-1">Desarrollo Web <span class="text-muted h6">en CoderHouse</span></div>
+                  <div class="text-muted text-small mb-2">2022</div>
+                  <div>Con este curso se aprende a crear un sitio web partiendo del prototipo en papel. Se adquieren las mejores prácticas del desarrollo web, trabajando con HTML y CSS. Brinda herramientas para optimizar al máximo un sitio web, haciendo uso de versionado de código con GIT, y preprocesadores como SASS e implementando frameworks como Bootstrap. Ayuda a comprender lo importante del SEO, subir el sitio a un servidor y crear presupuestos acordes a cada proyecto.</div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-right timeline-card-success card shadow-sm scroll-content fadeRight">
