--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
           <ul class="nav justify-content-end gap-2 pe-2">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="linkedIn" target="_blank" rel="noopener noreferrer">
+              <a class="nav-link" href="https://www.linkedin.com/in/belendefranchi/" title="linkedIn" target="_blank" rel="noopener noreferrer">
                 <img class="icon" src="./images/linkedin.png" width="25" alt="LinkedIn">
               </a>
             </li>
@@ -263,7 +263,7 @@
             <nav role="navigation">
               <ul class="nav justify-content-center gap-1">
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.linkedin.com/in/maria-bel%C3%A9n-de-franchi-26b00591/" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+                  <a class="nav-link" href="https://www.linkedin.com/in/belendefranchi/" title="LinkedIn" target="_blank" rel="noopener noreferrer">
                     <img class="icon" src="./images/linkedin.png" width="40" alt="LinkedIn">
                   </a>
                 </li>
